# django-puid

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  RELEASE.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
django_puid/: fields.py  utils.py
tests/: models.py  settings.py  test_fields.py
