[project]
name = "django-puid"
version = "0.1.0"
description = "Prefixed unique ID field for Django models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
addopts = "--no-migrations"
