[project]
name = "django-puid"
version = "0.1.1"
description = "Prefixed unique ID field for Django models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nawaz Gafar" }]
keywords = ["django", "uid", "id", "prefixed"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/ngafar/django-puid"
Repository = "https://github.com/ngafar/django-puid"
Issues = "https://github.com/ngafar/django-puid/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
addopts = "--no-migrations"
